
* Verilator 3.8** devel

***   Fix nested packed arrays and struct, bug600. [Jeremy Bennett]
      Packed arrays are now represented as a single linear vector in
      Verilated models.  This may affect packed arrays that are public or
      accessed via the VPI.

***   Support bind, to module names only, bug602. [Ed Lander]

***   Fix pin width mismatch error, bug595.  [Alex Solomatnikov]


* Verilator 3.844 2013/01/09

***   Support "unsigned int" DPI import functions, msg966.  [Alex Lee]

***   Fix package resolution of parameters, bug586. [Jeremy Bennett]

****  Fix non-integer vpi_get_value, bug587.  [Rich Porter]

****  Fix task inlining under $display and case, bug589, bug598.  [Holger Waechtler]

****  Fix package import of non-localparam parameter, bug474, bug591.  [Jeremy Bennett]

****  Fix package import of package imports, partial bug592.  [Jeremy Bennett]

****  Fix package import preventing local var, bug599.  [Jeremy Bennett]

****  Fix array extraction of implicit vars, bug601.  [Joe Eiler]


* Verilator 3.843 2012/12/01

***   Add +1364-1995ext and similar language options, bug532.  [Jeremy Bennett]

****  Fix mis-optimized identical submodule subtract, bug581.  [Charlie Brej]

****  Fix crash on dotted references into dead modules, bug583.  [Jeremy Bennett]

****  Fix compile issues on MSVCC, bug571, bug577.  [Amir Gonnen]

****  Fix --debug overriding preceding --dump-treei, bug580.  [Jeremy Bennett]


* Verilator 3.842 2012/11/03

****  Add -x-initial-edge, bug570.  [Jeremy Bennett]

****  Fix parameter pins interspersed with cells broke in 3.840.  [Bernard Deadman]

****  Fix large shift error on large shift constants.  [David Welch]

****  Fix $display mangling on GCC 4.7 and speed up, msg927, bug373, bug574. [R Diez]

****  Fix array of struct references giving false error, bug566. [Julius Baxter]

****  Fix missing var access functions when no DPI, bug572. [Amir Gonnen]

****  Fix name collision on unnamed blocks, bug567.  [Chandan Egbert]