@@ -790,5 +790,23 @@ module t;
     
 endmodule
  
+ 
+   
+predef 0 0
+predef 1 1
+predef 2 2
+predef 3 3
+predef 10 10
+predef 11 11
+predef 20 20
+predef 21 21
+predef 22 22
+predef 23 23
+predef -2 -2
+predef -1 -1
+predef 0 0
+predef 1 1
+predef 2 2
+ 
 
-`line 526 "t/t_preproc.v" 2
+`line 544 "t/t_preproc.v" 2
