@@ -14,6 +14,7 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***   Fix pin width mismatch error, bug595.  [Alex Solomatnikov]
 
+****  Define SYSTEMVERILOG, SV_COV_START and other IEEE mandated predefines.
 
 * Verilator 3.844 2013/01/09
 
